--- a/config.yaml
+++ b/config.yaml
@@ -4,9 +4,12 @@
 marvin_host: "http://10.7.2.100"
 
 providers:
-  - port: 8080
-  - port: 8090
-  - port: 11434
+  - base_url: http://10.7.2.100
+    port: 8080
+  - base_url: http://10.7.2.100
+    port: 8090
+  - base_url: http://10.7.2.100
+    port: 11434
 
 # How long /api/models responses may be served from the last computed snapshot (in seconds)
 cache_ttl_seconds: 300
