--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 # LLM Aggregator configuration
 # All runtime behavior should be driven from here, not hard-coded in code.
 
-marvin_host: "http://10.7.2.100"
+brainhost: "http://10.7.2.100"
 
 providers:
   - base_url: http://10.7.2.100
