--- a/config.yaml
+++ b/config.yaml
@@ -6,9 +6,9 @@ brain:
   # Port of the provider where the enrichment model is hosted
   port: 8080
   # Model used by the brain to enrich model metadata
-  model_id: "unsloth/GLM-4.6-GGUF:UD-IQ2_XXS"
-  # If true, send Authorization: Bearer <model_id> for calls to this port
-  use_bearer_model_id: true
+  id: "unsloth/GLM-4.6-GGUF:UD-IQ2_XXS"
+  # If true, send Authorization: Bearer <model-id> for calls to this port
+  use_bearer_model: true
   # Maximum number of models to enrich in a single batch
   max_batch_size: 5
 
