--- a/config.yaml
+++ b/config.yaml
@@ -25,9 +25,7 @@ time:
   enrich_idle_sleep: 5
 
 providers:
-  - base_url: http://10.7.2.100
-    port: 8080
-  - base_url: http://10.7.2.100
-    port: 8090
-  - base_url: http://10.7.2.100
-    port: 11434
+  - base_url: http://10.7.2.100:8080/v1
+    internal_base_url: http://10.7.2.100:8080/v1
+  - base_url: http://10.7.2.100:8090/v1
+  - base_url: http://10.7.2.100:11434/v1
