--- a/config.yaml
+++ b/config.yaml
@@ -3,6 +3,7 @@
 
 host: "0.0.0.0"
 port: 8888
+log_level: INFO  # DEBUG, INFO, WARNING, ERROR, CRITICAL
 
 brain:
   # URL of the provider where the enrichment model is hosted
