Add dependency extract2md

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ license = { text = "Apache-2.0" }
 dependencies = [
     "aiohttp",
     "apscheduler",
+    "extract2md",
     "fastapi",
     "httpx",
     "psutil",
