--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,11 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install -r requirements-dev.txt
 
-      - name: Lint
+      - name: Lint Python
         run: ruff check src tests
+
+      - name: Lint Markdown
+        run: pymarkdown --config .pymarkdown.json scan .
 
       - name: Run tests
         run: pytest --cov=src --cov-report=term-missing
