--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,11 @@
 
 host: "0.0.0.0"
 port: 8888
-log_level: INFO  # DEBUG, INFO, WARNING, ERROR, CRITICAL
+# DEBUG, INFO, WARNING, ERROR, CRITICAL
+log_level: INFO
+# Optional logging format string
+# Example: Replace 'pathname' with 'filename' to get shorter output
+log_format: "%(asctime)s - %(levelname)s - %(pathname)s:%(lineno)d - %(message)s"
 
 brain:
   # URL of the provider where the enrichment model is hosted
