Add provider API key support

--- a/config.local.yaml
+++ b/config.local.yaml
@@ -15,9 +15,9 @@ brain:
   # URL of the provider where the enrichment model is hosted
   base_url: "http://10.7.2.100:8080/v1"
   # Model used by the brain to enrich model metadata
-  id: "unsloth/GLM-4.6-GGUF:UD-IQ2_XXS"
+  id: "unsloth/GLM-4.6-GGUF:UD-IQ2_XXS_llm-aggregator"
   # If set, send Authorization: Bearer <API-KEY> for calls to this port
-  api_key: "unsloth/GLM-4.6-GGUF:UD-IQ2_XXS"
+  api_key: "unsloth/GLM-4.6-GGUF:UD-IQ2_XXS_llm-aggregator"
   # Maximum number of models to enrich in a single batch
   max_batch_size: 1
 
@@ -30,14 +30,6 @@ time:
   enrich_models_timeout: 120
   # for enrichment loop when queue is empty
   enrich_idle_sleep: 5
-
-ui:
-  # Controls whether FastAPI serves static assets (either the bundled UI or a custom bundle).
-  static_enabled: true
-  # Optional custom UI bundle directory. Leave unset/null to use the built-in dashboard.
-  # Custom bundles must contain a readable index.html at their root.
-  # When static_enabled is false, nothing is served at "/" or "/static" even if a path is provided.
-  custom_static_path: null
 
 providers:
   - base_url: http://10.7.2.100:8080/v1
