--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Lint Markdown
         run: pymarkdown --config .pymarkdown.json scan .
 
+      - name: Lint static JS
+        run: npx @biomejs/biome lint src/llm_aggregator/static/
+
       - name: Run tests
         run: pytest --cov=src --cov-report=term-missing
 
