--- a/config.yaml
+++ b/config.yaml
@@ -22,12 +22,22 @@ brain:
   max_batch_size: 1
 
 providers:
+    # Public URL of the provider for users
   - base_url: http://10.7.2.100:8080/v1
-    internal_base_url: http://10.7.2.100:8080/v1
-    # Optional bearer token for /v1/models calls to this provider
-    api_key: null
-  - base_url: http://10.7.2.100:8090/v1
-  - base_url: http://10.7.2.100:11434/v1
+#  - base_url: http://10.7.2.100:8090/v1
+#    # Optional internal url for server-to-server calls
+#    internal_base_url: http://10.7.2.100:8080/v1
+#    # Optional bearer token for /v1/models calls to this provider
+#    api_key: null
+#  - base_url: http://10.7.2.100:11434/v1
+#    # Optional files size gatherer configuration
+#    files_size_gatherer:
+#      # Script is invoked as: <path> <base_path> <full_model_name>
+#      # Packaged helper script (relative to the repo / package)
+#      path: src/llm_aggregator/scripts/files-size-50GiB.sh
+#      base_path: "/var/lib/ollama/models"
+#      # Optional per-gatherer timeout in seconds (default: 15)
+#      timeout_seconds: 15
 
 # Additional websites where markdown model info can be fetched.
 # Every template MUST contain {model_id} or the service will fail to start.
@@ -43,7 +53,7 @@ time:
   # Timeout for fetching models from providers
   fetch_models_timeout: 10
   # Timeout for enriching models
-  enrich_models_timeout: 120
+  enrich_models_timeout: 300
   # for enrichment loop when queue is empty
   enrich_idle_sleep: 5
 
@@ -65,22 +75,19 @@ brain_prompts:
     Before the JSON payload you may receive extra user messages like 'Model-Info for <id> from ExampleSource'. They contain markdown context scraped from trusted sources declared in the configuration. Use that information when relevant, but still obey every rule below.
 
     Return EXACTLY this JSON structure and nothing else (valid JSON):
-    {
-      "enriched": [
-        {
-          "id": "<exact id from input>",
-          "base_url": "<exact base_url from input>",
-          "internal_base_url": "<exact internal_base_url from input>",
-          "summary": "<very short description of this specific model>",
-          "types": ["llm"],
-          "model_family": "<e.g. Gemma, Qwen, Llama, Mistral>",
-          "context_size": <e.g. 4096, 8192, 32768, 131072>,
-          "quant": "<e.g. Q4_K_M, Q5_K_M, Q8_0>",
-          "param": "<e.g. 7B, 14B, 70B>"
-        }
-        // one entry per input model, in the same order
-      ]
-    }
+    [
+      {
+        "id": "<exact id from input>",
+        "base_url": "<exact base_url from input>",
+        "summary": "<very short description of this specific model>",
+        "types": ["llm"],
+        "model_family": "<e.g. Gemma, Qwen, Llama, Mistral>",
+        "context_size": <e.g. 4096, 8192, 32768, 131072>,
+        "quant": "<e.g. Q4_K_M, Q5_K_M, Q8_0>",
+        "param": "<e.g. 7B, 14B, 70B>"
+      }
+      // one entry per input model, in the same order
+    ]
 
     Field rules:
     - "types" is an array of tokens, each one of:
